--- a/src/main/resources/public/theatre_performance.html
+++ b/src/main/resources/public/theatre_performance.html
@@ -34,6 +34,14 @@
                             <a href ="theatre.html">Театри</a>
                         </div>
                     </div>
+                    <div class="dropdown">
+                        <button class="dropbtn" style="margin-left: 0">Запити</button>
+                        <div style="min-width: 400px;" class="dropdown-content">
+                            <a href="" data-toggle="modal" data-target="#selectByDateGeneral">Список заходів, проведених протягом вказаного періоду (загалом)</a>
+                            <a href="" data-toggle="modal" data-target="#selectByDateOrganizer">Список заходів, проведених протягом вказаного періоду (організатором)</a>
+                            <a href="query.html">Запит 3</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="panel-body">
 
@@ -68,7 +76,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
     <!-- Додавання артиста -->
@@ -122,6 +129,48 @@
                     <button id="updateTheatrePerformanceButton" ng-click="theatrePerformanceCtrl.updateTheatrePerformance()">Змінити</button>
                 </div>
                 <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="selectByDateGeneral" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Вибір дати</h4>
+                </div>
+                <div class="modal-body">
+                    <label>Від:<br><input type="date" name ="Перша дата" id="firstDate"/> </label><br>
+                    <label>До: <br><input type="date" name ="Друга дата" id="secondDate"/> </label><br>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" id="showConcertsByDate" ng-click="theatrePerformanceCtrl.showConcertsByDate()" data-dismiss="modal">Вивести</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="selectByDateOrganizer" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Вибір дати і організатора</h4>
+                </div>
+                <div class="modal-body">
+                    <label>Від:<br><input type="date" name ="Перша дата" id="orgFirstDate"/> </label><br>
+                    <label>До: <br><input type="date" name ="Друга дата" id="orgSecondDate"/> </label><br>
+                    <label>Організатор:</label><br>
+                    <select id="selectOrg"></select>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" id="showConcertsByDateOrganizer" ng-click="theatrePerformanceCtrl.showConcertsByDateOrganizer()" data-dismiss="modal">Вивести</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
