--- a/src/main/resources/public/artist_genre.html
+++ b/src/main/resources/public/artist_genre.html
@@ -38,6 +38,7 @@
                     <div class="dropdown">
                         <button class="dropbtn" style="margin-left: 0">Запити</button>
                         <div style="min-width: 400px;" class="dropdown-content">
+                            <a href="" data-toggle="modal" data-target="#selectByGenre">Список артистів за вказаним жанром</a>
                             <a href="" ng-click="artistGenreCtrl.selectMoreThanOneGenre()">Список артистів, що працюють більше, ніж в одному жанрі</a>
                             <a href="query.html">Запит 3</a>
                         </div>
@@ -136,6 +137,46 @@
                 <div class="modal-footer">
                     <button id="deleteGenresButton" type="button" class="btn btn-default" ng-click="artistGenreCtrl.deleteGenre()">Видалити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="artistGenreCtrl.onClose()">Закрити</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="selectByGenre" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Вибір жанру</h4>
+                </div>
+                <div class="modal-body">
+                    <select id="genres" name="Жанри">
+                        <option>Комедія</option>
+                        <option>Драма</option>
+                        <option>Мелодрама</option>
+                        <option>Мюзикл</option>
+                        <option>Пародія</option>
+                        <option>Фантастика</option>
+                        <option>Боєвик</option>
+                        <option>Фентезі</option>
+                        <option>Тріллер</option>
+                        <option>Детектив</option>
+                        <option>Симфонія</option>
+                        <option>Соната</option>
+                        <option>Тріо</option>
+                        <option>Ораторія</option>
+                        <option>Квартет</option>
+                        <option>Натюрморт</option>
+                        <option>Портрет</option>
+                        <option>Пейзаж</option>
+                        <option>Скульптура</option>
+                        <option>Різьблення</option>
+                    </select>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" id="showArtistsByGenre" ng-click="artistGenreCtrl.showArtistsByGenre()" data-dismiss="modal">Вивести</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
 
