--- a/src/main/resources/public/contest_in_palace.html
+++ b/src/main/resources/public/contest_in_palace.html
@@ -40,6 +40,7 @@
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectByDateGeneral">Список заходів, проведених протягом вказаного періоду (загалом)</a>
                             <a href="" data-toggle="modal" data-target="#selectByDateOrganizer">Список заходів, проведених протягом вказаного періоду (організатором)</a>
+                            <a href="" data-toggle="modal" data-target="#selectByPalace">Список заходів, проведених у вказаній культурній споруді (палаці)</a>
                             <a href="query.html">Запит 3</a>
                         </div>
                     </div>
@@ -172,6 +173,25 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-default" id="showConcertsByDateOrganizer" ng-click="contestInPalaceCtrl.showConcertsByDateOrganizer()" data-dismiss="modal">Вивести</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="selectByPalace" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Вибір споруди (палацу)</h4>
+                </div>
+                <div class="modal-body">
+                    <select id="selectPalaceRequest"></select>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" id="showContestByPalace" ng-click="contestInPalaceCtrl.showContestByPalace()" data-dismiss="modal">Вивести</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
