--- a/src/main/resources/public/impresario.html
+++ b/src/main/resources/public/impresario.html
@@ -38,7 +38,6 @@
                         <button class="dropbtn" style="margin-left: 0">Запити</button>
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectByArtist">Список імпресаріо вказаного артиста</a>
-                            <a href="" data-toggle="modal" data-target="#selectByArtist">Список артистів, що працюють із вказаним імпресаріо</a>
                             <a href="query.html">Запит 3</a>
                         </div>
                     </div>
@@ -117,7 +116,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Вибір імпресаріо</h4>
+                    <h4 class="modal-title">Вибір артиста</h4>
                 </div>
                 <div class="modal-body">
                     <select id="selectByArtistArtists"></select>
