--- a/src/main/resources/public/theatre_performance.html
+++ b/src/main/resources/public/theatre_performance.html
@@ -39,6 +39,7 @@
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectByDateGeneral">Список заходів, проведених протягом вказаного періоду (загалом)</a>
                             <a href="" data-toggle="modal" data-target="#selectByDateOrganizer">Список заходів, проведених протягом вказаного періоду (організатором)</a>
+                            <a href="" data-toggle="modal" data-target="#selectByTheatre">Список заходів, проведених у вказаному театрі</a>
                             <a href="query.html">Запит 3</a>
                         </div>
                     </div>
@@ -171,6 +172,25 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-default" id="showConcertsByDateOrganizer" ng-click="theatrePerformanceCtrl.showConcertsByDateOrganizer()" data-dismiss="modal">Вивести</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="selectByTheatre" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Вибір театру</h4>
+                </div>
+                <div class="modal-body">
+                    <select id="selectTheatreRequest"></select>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" id="showPerformanceByTheatre" ng-click="theatrePerformanceCtrl.showPerformanceByTheatre()" data-dismiss="modal">Вивести</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
