--- a/src/main/resources/public/artist.html
+++ b/src/main/resources/public/artist.html
@@ -36,7 +36,8 @@
                     <div class="dropdown">
                         <button class="dropbtn" style="margin-left: 0">Запити</button>
                         <div style="min-width: 400px;" class="dropdown-content">
-                            <a href="" data-toggle="modal" data-target="#selectByImpresario">Запит 1</a>
+                            <a href="" data-toggle="modal" data-target="#selectByDontParticipate">Список артистів, які не брали участь в жодному конкурсі протягом
+                                вказаного періоду</a>
                             <a href="query.html">Запит 3</a>
                         </div>
                     </div>
@@ -113,6 +114,23 @@
 
         </div>
     </div>
+
+    <div id="selectByDontParticipate" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Вибір періоду</h4>
+                </div>
+                <div class="modal-body">
+                    <label>Від:<br><input type="date" name ="Перша дата" id="firstDate"/> </label><br>
+                    <label>До: <br><input type="date" name ="Друга дата" id="secondDate"/> </label><br>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" id="selectByDontParticipateBtn" ng-click="artistCtrl.selectByDontParticipate()" data-dismiss="modal">Вивести</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                </div>
+            </div>
 
 </div>
 
