Queries with specifying screen size or capacity for Cinema, Theatre, Concert Hall, Culture Palace.

--- a/src/main/resources/public/artist.html
+++ b/src/main/resources/public/artist.html
@@ -131,6 +131,8 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
+        </div>
+    </div>
 
 </div>
 
