--- a/src/main/resources/public/concert_hall.html
+++ b/src/main/resources/public/concert_hall.html
@@ -40,6 +40,7 @@
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectByDateGeneral">Список заходів, проведених протягом вказаного періоду (загалом)</a>
                             <a href="" data-toggle="modal" data-target="#selectByDateOrganizer">Список заходів, проведених протягом вказаного періоду (організатором)</a>
+                            <a href="" data-toggle="modal" data-target="#selectByCapacity">Список площадок із вказаною місткістю (більше або дорівнює)</a>
                             <a href="query.html">Запит 3</a>
                         </div>
                     </div>
@@ -138,6 +139,25 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-default" id="showConcertsByDate" ng-click="concertHallCtrl.showConcertsByDate()" data-dismiss="modal">Вивести</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="selectByCapacity" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Вибір місткості</h4>
+                </div>
+                <div class="modal-body">
+                    <input type="number" id="capacity"/>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" id="showByCapacity" ng-click="concertHallCtrl.showByCapacity()" data-dismiss="modal">Вивести</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
