--- a/src/main/resources/public/impresario_and_genre.html
+++ b/src/main/resources/public/impresario_and_genre.html
@@ -40,7 +40,7 @@
                         <button class="dropbtn" style="margin-left: 0">Запити</button>
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectByGenre">Список імпресаріо за вказаним жанром</a>
-                            <a href="query.html">Запит 3</a>
+                            <a href="" ng-click="impresarioGenreCtrl.selectMoreThanOneGenre()">Список імпресаріо, що працюють більше, ніж в одному жанрі</a>
                         </div>
                     </div>
                 </div>
