--- a/src/main/resources/public/organizer.html
+++ b/src/main/resources/public/organizer.html
@@ -40,16 +40,16 @@
                         <button class="dropbtn" style="margin-left: 0">Запити</button>
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectAndCountOfEvents">Список організаторів та кількість проведених ними заходів</a>
-                            <a href="query.html">Запит 3</a>
                         </div>
                     </div>
                 </div>
                 <div class="panel-body">
-                    <table class="table table-striped" id="organizer">
+                    <table class="table table-striped">
             <thead>
-                <tr>
+                <tr id="organizerHeader">
                     <th>&#128273ІД</th>
                     <th>Ім'я</th>
+                    <th hidden id="count"></th>
                     <th class="headerWidth"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal">✚</button></th>
                 </tr>
             </thead>
@@ -59,6 +59,7 @@
             <tr ng-repeat = "item in organizers">
                 <td>{{item.id}}</td>
                 <td>{{item.name}}</td>
+                <td hidden class="dataCount"></td>
                 <td>
                     <button id="update" ng-click="organizerCtrl.startUpdateOrganizer(item.id, item.name)" class="btn-warning" data-toggle="modal" data-target="#editModal"><span style="font-size: 18px">✏</span></button>
                     <button id="delete" ng-click="organizerCtrl.deleteOrganizer(item.id)" class="btn-danger">❌</button>
