Added QUERY for Artist Impresario: select artists with more than one impresario.

--- a/src/main/resources/public/artist_and_impresario.html
+++ b/src/main/resources/public/artist_and_impresario.html
@@ -40,6 +40,7 @@
                         <button class="dropbtn" style="margin-left: 0">Запити</button>
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectByImpresario">Список артистів, що працюють із вказаним імпресаріо</a>
+                            <a href="" ng-click="artistImpresarioCtrl.selectByMoreThanOneImpresario()">Список артистів, що працюють більше, ніж з одним імпресаріо</a>
                         </div>
                     </div>
                 </div>
